# agentforge

./: .env.example  CHANGELOG.md  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ai-baseline.yml  ai-regression-gate.yml  ci.yml
docs/: agent-pack-spec-v0.1.md  ai-regression-gate.md
evals/sample/: pack.jsonl
examples/: benchmark_simple.json  eval_sample.jsonl
helm/agentforge/: Chart.yaml  values.yaml
schemas/: agent_pack_manifest_v0.1.schema.json
src/agentforge/: __init__.py  __main__.py  agent.py  api.py  cli.py  config.py  controller.py  epistemic.py  (+16 more)
tests/: test_agent_smoke.py  test_ai_regression_gate_action.py  test_backtrack_snapshot.py  test_backtracking.py  test_baseline_artifact_extraction.py  test_branch_candidates.py  test_calculator_tool.py  test_cli_gate.py  test_code_check_loop.py  test_code_run_multi_tool.py  test_connectors.py  test_context_trim.py  test_contract_injection.py  test_controller_backtracking.py  test_controller_selection.py  test_eval_gating.py  test_eval_junit.py  test_eval_mode.py  test_eval_normalize.py  test_eval_runner.py  test_eval_trace_replay.py  test_evals_runtime.py  test_fact_extract.py  test_fact_extract_structured.py  test_gate_baseline.py  test_gate_config.py  test_gate_init.py  test_json_repair.py  test_memory_store.py  test_openai_compat_client.py  test_packs.py  test_planner.py  test_policy_engine_routing.py  test_pre_solver.py  test_profile_graphs.py  test_progress_structured.py  test_python_sandbox_tool.py  test_registry.py  test_router.py  test_runtime_rbac.py  (+19 more)
(+68 files in other folders)
